# ScType

./: .nfs0000000007d619fa00000001  2  =0.10.1  Dockerfile  README-dev.md  README-docker.md  README.md  all_examples.txt  build_and_push.sh  chatgpt_feeratio_prompt.txt  chatgpt_finance_prompt.txt  chatgpt_finance_prompt_v1.txt  chatgpt_finance_prompt_v3.txt  chatgpt_finance_prompt_v4.txt  chatgpt_test.py  chattgpt_finance_type_prompt_v2.txt  create_typefile.md  expected_output.txt  financial_type_keys.py  output.  output.txt  output1.txt  output2.txt  output3.txt  outuput.txt  previous_docker_location.txt  pyproject.toml  pyproject2.toml  setup.py2  tasks.txt  temp.txt  test_benchmark.sh  test_benchmark_debug.sh  test_benchmark_final.sh  test_benchmark_min.sh  test_branch.txt
Unit_Tests/: BalanceAndNorm.sol  BalanceAndNormTest_types.txt  CrossContract.sol  CrossContractTest_types.txt  FieldsMapsAndArrays.sol  FieldsMapsAndArraysTest_types.txt  FinancialMeaning.sol  FinancialMeaningTest_tfypes.txt  FinancialMeaningTest_types.txt  IImportedContract.sol  ITypicalOracle.sol  ITypicalTokenWrapper.sol  ImportedContract.sol  PriceAndExt.sol  PriceAndExtTest_types.txt  output.txt
run_results/: README.md  resuls14.md  resulst13.md  results1.md  results10.md  results11.md  results12.md  results13.md  results14.md  results15.md  results16.md  results17.md  results18.md  results19.md  results2.md  results20.md  results21.md  results22.md  results23.md  results24.md  results25.md  results26.md  results27.md  results28.md  results29.md  results3.md  results4.md  results5.md  (+3 more)
(+400 files in other folders)
