[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tcheck"
version = "0.0.1"
authors = [
  { name="Brian Zhang", email="bzhangprogramming@gmail.com" },
]
description = "Abstract type inference for smart contracts"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  'slither-analyzer >= 0.9.0',
  'solc-select >= 1.0.0',
  'argparse >= 1.4.0',
  'z3-solver >= 4.10',
  'crytic-compile >= 0.3.0',
 
]

[project.scripts]
artist = "artist.__main__:main"

[project.urls]
"Homepage" = "https://github.com/ZhangZhuoSJTU/Artist"
"Bug Tracker" = "https://github.com/ZhangZhuoSJTU/Artist/issues"
